--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
     "@coreui/icons-angular": "^3.0.0",
     "@coreui/utils": "^1.3.1",
     "chart.js": "^3.7.1",
+    "file-saver": "^2.0.5",
     "ngx-perfect-scrollbar": "^10.1.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -42,6 +44,7 @@
     "@angular/cli": "~13.3.0",
     "@angular/compiler-cli": "~13.3.0",
     "@angular/localize": "~13.3.0",
+    "@types/file-saver": "^2.0.5",
     "@types/jasmine": "^4.0.3",
     "@types/node": "^16.11.31",
     "jasmine-core": "~4.1.0",
