REPORTES BASICOS FUNCIONALES
Instalar las nuevas dependencias(jquery) Ya estan los reportes automaticos para consumir cualquier JSON y renderizarlo.

--- a/angular.json
+++ b/angular.json
@@ -37,7 +37,7 @@
             "styles": [
               "src/scss/styles.scss"
             ],
-            "scripts": [],
+            "scripts": ["./node_modules/jquery/dist/jquery.js"],
             "allowedCommonJsDependencies": [
               "chart.js",
               "@coreui/chartjs/dist/js/coreui-chartjs.js"
