--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@coreui/utils": "^1.3.1",
     "chart.js": "^3.7.1",
     "file-saver": "^2.0.5",
+    "jquery": "^3.6.0",
     "ngx-perfect-scrollbar": "^10.1.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
@@ -46,6 +47,7 @@
     "@angular/localize": "~13.3.0",
     "@types/file-saver": "^2.0.5",
     "@types/jasmine": "^4.0.3",
+    "@types/jquery": "^3.5.14",
     "@types/node": "^16.11.31",
     "jasmine-core": "~4.1.0",
     "karma": "~6.3.19",
