--- a/angular.json
+++ b/angular.json
@@ -36,7 +36,11 @@
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css",
-              "src/scss/styles.scss"
+              "sweetalert2/dist/sweetalert2.min.css",
+              "src/scss/styles.scss",
+              "node_modules/primeicons/primeicons.css",
+              "node_modules/primeng/resources/themes/lara-light-blue/theme.css",
+              "node_modules/primeng/resources/primeng.min.css"
             ],
             "scripts": ["./node_modules/jquery/dist/jquery.js"],
             "allowedCommonJsDependencies": [
