--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~13.3.0",
+    "@angular/animations": "^13.3.11",
     "@angular/cdk": "~13.3.0",
     "@angular/common": "~13.3.0",
     "@angular/compiler": "~13.3.0",
@@ -34,9 +34,13 @@
     "@coreui/utils": "^1.3.1",
     "chart.js": "^3.7.1",
     "file-saver": "^2.0.5",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.6.0",
     "ngx-perfect-scrollbar": "^10.1.1",
+    "primeicons": "^5.0.0",
+    "primeng": "^13.4.1",
     "rxjs": "~7.5.0",
+    "sweetalert2": "^11.4.17",
     "tslib": "^2.3.0",
     "xlsx": "^0.18.5",
     "zone.js": "~0.11.4"
